--- a/src/fragments/header/header.css
+++ b/src/fragments/header/header.css
@@ -19,7 +19,7 @@
 }
 
 .header-nav {
-  background-color: #009f7f !important;
+  background-color: #3d33ff !important;
 }
 .items-cart {
   background-color: rgb(255, 29, 29);
