--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -1,6 +1,6 @@
 .banner-container {
     margin:1.5rem 0px 3rem;
-    background-color: rgb(0, 159, 127);
+    background-color: #009cff;
     color:#daddc4;
 }
 .link {
@@ -8,6 +8,6 @@
     border: none;
 }
 .link a {
-    color:rgb(0, 159, 127);
+    color:rgb(221, 226, 225);
     text-decoration: none;
 }
