--- a/src/fragments/footer/footer.css
+++ b/src/fragments/footer/footer.css
@@ -1,5 +1,5 @@
 .bg-footer {
-    background-color:rgb(0, 159, 127);
+    background-color:#3d33ff;
     padding:20px;
     color:rgb(218, 221, 196);
 }
