--- a/src/components/product.css
+++ b/src/components/product.css
@@ -1,4 +1,4 @@
-@import url('https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
+/* @import url('https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 .item{
  padding:20px;
  background-color: #f3f3f3;
@@ -37,4 +37,4 @@
 }
 .addCart.disabled:hover{
     background-color: black;
-}
+} */
