--- a/src/pages/product-page/productstyle.css
+++ b/src/pages/product-page/productstyle.css
@@ -1,4 +1,4 @@
-
+/* 
 .breadcrumb a {
     text-decoration: none;
     color:rgba(33, 37, 41, 0.75);
@@ -26,4 +26,4 @@
 }
 .addToCartbtn.disabled:hover {
     background-color: black;
-}
+} */
